Fixed spacing on page break

--- a/sass/_print.scss
+++ b/sass/_print.scss
@@ -1,6 +1,6 @@
 @media print {
-  #employment{
-    padding-top: 50px;
+  #education{
+    margin-top: 20px;
   }
   #sidebar {
     display: none;
